[project]
name = "langgraph-demo"
version = "0.1.0"
description = "A minimal uv-based LangGraph agent demo."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=1.1,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4,<0.5",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true
